# pdfsmarteditor

./: pyproject.toml  run_ci.sh
.github/workflows/: ci.yml
api/: deps.py  main.py  models.py  storage.py  utils.py
api/routes/: documents.py  tools.py
examples/: batch_process_pdfs.py
pdfsmarteditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdfsmarteditor/cli/: main.py
pdfsmarteditor/core/: converter.py  document_manager.py  editor.py  exceptions.py  form_handler.py  manipulator.py  metadata_editor.py  object_inspector.py  page_manipulator.py
pdfsmarteditor/tests/: conftest.py  test_cli.py  test_converter_advanced.py  test_core.py  test_editor_comprehensive.py  test_manipulator_comprehensive.py  test_metadata_form.py  test_utils.py
pdfsmarteditor/utils/: canvas_helpers.py  config.py  image_utils.py  logging.py  pdf_helpers.py  types.py  validators.py
tests/: conftest.py  test_api_smoke.py  test_api_tools.py
